--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <style>
         body { font-family: monospace; background: #111; color: #eee; }
         .device { border: 1px solid #444; padding: 10px; margin-bottom: 20px; }
-        pre { height: 300px; overflow-y: scroll; background: #000; padding: 10px; }
+        pre { height: 300px; overflow-y: scroll; background: #000; padding: 10px;white-space: pre-wrap; color: #0f0; }
     </style>
 </head>
 <body>
