--- a/static/index.html
+++ b/static/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>UART Monitor</title>
-
-    <style>
-        body { font-family: monospace; background: #111; color: #eee; }
-        .device { border: 1px solid #444; padding: 10px; margin-bottom: 20px; }
-        pre { height: 300px; overflow-y: scroll; background: #000; padding: 10px;white-space: pre-wrap; color: #0f0; }
-    </style>
+<meta charset="utf-8">
+<title>UART Monitor</title>
+<style>
+body { font-family: monospace; background: #111; color: #eee; }
+.device { border: 1px solid #444; padding: 10px; margin-bottom: 20px; }
+pre { height: 300px; overflow-y: scroll; background: #000; padding: 10px; white-space: pre-wrap; color: #0f0; }
+input { width: 200px; }
+button { margin-left: 5px; }
+</style>
 </head>
 <body>
 
 <h1>UART Web Console</h1>
-
 <div id="containers"></div>
 
 <script>
 const DEVICES = ["device1", "device2"];
-
-let ws = new WebSocket("ws://" + location.hostname + ":8765");
+const ws = new WebSocket("ws://" + location.hostname + ":8765");
 
 function createUI() {
-    let container = document.getElementById("containers");
+    const container = document.getElementById("containers");
     DEVICES.forEach(dev => {
         container.innerHTML += `
             <div class="device">
@@ -35,30 +34,26 @@ function createUI() {
         `;
     });
 }
+
 createUI();
 
-ws.onopen = () => console.log("WS connected");
-
-ws.onmessage = (event) => {
-    const msg = JSON.parse(event.data); 
-    let pre = document.getElementById(`log_${msg.device}`);
-    if (pre) {
+ws.onopen = () => console.log("WebSocket connected");
+ws.onmessage = event => {
+    const msg = JSON.parse(event.data);
+    const pre = document.getElementById("log_" + msg.device);
+    if(pre){
         pre.textContent += msg.text;
         pre.scrollTop = pre.scrollHeight;
     }
 };
 
 function sendCmd(device) {
-    let input = document.getElementById("input_" + device);
-    let cmd = input.value;
-
-    let msg = {
-        device: device,
-        cmd: cmd
-    };
-
-    ws.send(JSON.stringify(msg));
-    input.value = "";
+    const input = document.getElementById("input_" + device);
+    const cmd = input.value;
+    if(cmd && ws.readyState === WebSocket.OPEN){
+        ws.send(JSON.stringify({device: device, cmd: cmd}));
+        input.value = "";
+    }
 }
 </script>
 
