--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@ button { margin-left: 5px; }
 <div id="containers"></div>
 
 <script>
-const DEVICES = ["device1", "device2"];
+const DEVICES = ["device0","device1", "device2"];
 const socket = io();
 const ansi_up = new AnsiUp();
 
